--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ org.gradle.parallel=true
 	loader_version=0.14.17
 
 # Mod Properties
-	mod_version = 1.0.3
+	mod_version = 1.0.3-1.19.4
 	maven_group = net.iamaprogrammer
 	archives_base_name = reimaginedmenus
 
