--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ org.gradle.parallel=true
 	loader_version=0.14.22
 
 # Mod Properties
-	mod_version = 1.1.0-1.20.x
+	mod_version = 2.0.0-1.20.2
 	maven_group = net.iamaprogrammer
 	archives_base_name = reimaginedmenus
 
