--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,16 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-minecraft_version=1.21
-yarn_mappings=1.21+build.1
-loader_version=0.15.11
+minecraft_version=1.21.1
+yarn_mappings=1.21.1+build.3
+loader_version=0.16.2
 
 # Mod Properties
-mod_version = 2.0.0-1.21
+mod_version = 3.0.0-1.21.1
 maven_group = net.iamaprogrammer
 archives_base_name = reimaginedmenus
 
 # Dependencies
-fabric_version=0.100.1+1.21
+fabric_version=0.102.1+1.21.1
+cloth_gamerules=1.1.1+1.19.4
+cloth_config=15.0.130
