--- a/gradle.properties
+++ b/gradle.properties
@@ -3,16 +3,17 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-minecraft_version=1.21.1
-yarn_mappings=1.21.1+build.3
-loader_version=0.16.2
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.10
+loader_version=0.15.7
 
 # Mod Properties
-mod_version = 3.0.0-1.21.1
+mod_version = 3.0.0-1.20.2
 maven_group = net.iamaprogrammer
 archives_base_name = reimaginedmenus
 
 # Dependencies
-fabric_version=0.102.1+1.21.1
+fabric_version=0.86.1+1.20.1
+#from_the_fog=1.9.2
 cloth_gamerules=1.1.1+1.19.4
-cloth_config=15.0.130
+cloth_config=12.0.119
