--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,17 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=1.20.4
-	yarn_mappings=1.20.4+build.3
-	loader_version=0.15.3
+minecraft_version=1.20.4
+yarn_mappings=1.20.4+build.3
+loader_version=0.15.7
 
 # Mod Properties
-	mod_version = 2.0.0-1.20.4
-	maven_group = net.iamaprogrammer
-	archives_base_name = reimaginedmenus
+mod_version = 2.0.0-1.20.4
+maven_group = net.iamaprogrammer
+archives_base_name = reimaginedmenus
 
 # Dependencies
-	fabric_version=0.92.1+1.20.4
+fabric_version=0.92.1+1.20.4
+#from_the_fog=1.9.2
+cloth_gamerules=1.1.1+1.19.4
+cloth_config=13.0.114
