--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,5 @@ archives_base_name = reimaginedmenus
 
 # Dependencies
 fabric_version=0.97.8+1.20.6
+cloth_gamerules=1.1.1+1.19.4
+cloth_config=14.0.129
